tests/typing/hints/literals/real.expected
File "tests/typing/hints/literals/real.smt2", line 2, character 11-14:
2 | (assert (= 1.0 1.0))
               ^^^
Error Unbound identifier: `1.0`
Hint: The current logic does not include real arithmtic
