tests/typing/hints/literals/real.smt2
(set-logic QF_UF)
(assert (= 1.0 1.0))
(check-sat)
